# httpapi

./: .env.example  .gitignore  CMakeLists.txt  LICENSE  README.md  build.bat  build.ps1
examples/: CMakeLists.txt  main.cpp
include/httpapi/: http_server.hpp  json_handler.hpp  middleware.hpp  request.hpp  response.hpp  router.hpp  static_files.hpp  utils.hpp
src/: CMakeLists.txt  http_server.cpp  json_handler.cpp  middleware.cpp  request.cpp  response.cpp  router.cpp  static_files.cpp  utils.cpp
static/: index.html  style.css
